# Github_documentation_Generator

./: .gitignore  README.md  pyproject.toml  requirements.txt
UI/: app.py  helper.py
src/: main.py
src/models/: request.py
src/utility/: config.py  file_crawler.py  git.py  llm_util.py  path.py  preprocess_file.py
src/utility/supabase/: database.py  models.py
